--- a/power_analysis.ipynb
+++ b/power_analysis.ipynb
@@ -36,12 +36,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stde = cvr*(1-cvr)\n",
+    "variance = cvr*(1-cvr)\n",
     "sample_per_variant = []\n",
     "\n",
     "for mde_i in mde:\n",
     "    delta = cvr*mde_i\n",
-    "    sample_per_variant.append((2*(norm.ppf(1 - alpha/2) + norm.ppf(power))**2)/(delta**2/stde))\n",
+    "    sample_per_variant.append((2*(norm.ppf(1 - alpha/2) + norm.ppf(power))**2)/(delta**2/variance))\n",
     "    \n",
     "duration_days = [i/daily_traffic for i in sample_per_variant]"
    ]
